LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/sfpm_Task__c.object-meta.xml
<CustomObject>
    <description>2020-01-13 - N. Ehrmann - Part of the sfpm (Salesforce Project Management) collection of objects. A Task is the smallest unit of work that requires some level of prioritization and organization. Tasks can also have subtasks and Approvals.</description>
    <label>Task</label>
    <nameField>
        <label>Task Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>