LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The actual outcome (and source of the issue) of the Steps to Reproduce.</description>
    <label>Actual Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>