LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The primary application of the issue / work.</description>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adaptive Insights</fullName>
            </value>
            <value>
                <fullName>ChurnZero</fullName>
            </value>
            <value>
                <fullName>ConnectAndSell</fullName>
            </value>
            <value>
                <fullName>Gong</fullName>
            </value>
            <value>
                <fullName>Ironclad</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Pendo</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>