LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <description>2020-01-15 - N. Ehrmann - Notes regarding approval status.</description>
    <label>Approval Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>