LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Assigned_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Name__c</fullName>
    <description>2020-03-02 - N. Ehrmann - MANUAL - The name of the Profile or Permission Set being applied.</description>
    <inlineHelpText>The name of the Profile or Permission Set being applied.</inlineHelpText>
    <label>Assigned Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>