LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-21 - N. Ehrmann - The assignee for completing this task.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>