LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Backlog_Status__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Status__c</fullName>
    <description>2020-01-15 - N. Ehrmann - Status for use on the Backlog kanban.</description>
    <label>Backlog Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
            <value>
                <fullName>Prioritization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>