LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Bug_Source__c.field-meta.xml
<CustomField>
    <fullName>Bug_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-14 - N. Ehrmann - For Issues, the original work which caused the problem.</description>
    <label>Bug Source</label>
    <referenceTo>sfpm_Task__c</referenceTo>
    <relationshipName>Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>