LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Build_Area__c.field-meta.xml
<CustomField>
    <fullName>Build_Area__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The general area of the build.</description>
    <inlineHelpText>The general area of the configuration / change, such as &quot;Setup &gt; Sharing Settings&quot;.</inlineHelpText>
    <label>Build Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>