LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Build_Name__c.field-meta.xml
<CustomField>
    <fullName>Build_Name__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The name of the configuration piece or code unit.</description>
    <inlineHelpText>The name of the configuration piece, such as the API Name of a Custom Field or Object, or the name of an Apex Class.</inlineHelpText>
    <label>Build Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>