LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Build_Notes__c.field-meta.xml
<CustomField>
    <fullName>Build_Notes__c</fullName>
    <description>2020-01-14 - N. Ehrmann - General comments on the build.</description>
    <label>Build Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>