LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Build_Object__c.field-meta.xml
<CustomField>
    <fullName>Build_Object__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The Object affected by the build.</description>
    <inlineHelpText>The API name of the Object affected by these changes.</inlineHelpText>
    <label>Build Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>