LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Build_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Build_Sandbox__c</fullName>
    <description>2020-02-03 - N. Ehrmann - The current / last Sandbox for build items.</description>
    <label>Build Sandbox</label>
    <length>100</length>
    <type>Text</type>
</CustomField>