LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Build_Type__c.field-meta.xml
<CustomField>
    <fullName>Build_Type__c</fullName>
    <description>2020-01-14 - N. Ehrmann - Whether or not the build action (whether configuration or code) is net new or an edit of existing configurations.</description>
    <label>Build Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>