LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The date that work was completed.</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>