LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The department of the parent project.</description>
    <formula>TEXT(Project__r.Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>