LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>2020-01-14 - N. Ehrmann - A detailed description of the Task.</description>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>