LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Documentation_Link__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Link__c</fullName>
    <description>2020-03-11 - N. Ehrmann - Link to GDrive documentation folder.</description>
    <inlineHelpText>Link to GDrive documentation folder.</inlineHelpText>
    <label>Documentation Link</label>
    <type>Url</type>
</CustomField>