LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Done_Status__c.field-meta.xml
<CustomField>
    <fullName>Done_Status__c</fullName>
    <description>2020-01-15 - N. Ehrmann - Status for Tasks which are no longer being worked.</description>
    <label>Done Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>