LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Driver_Technical_Debt__c.field-meta.xml
<CustomField>
    <fullName>Driver_Technical_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-01-21 - N. Ehrmann - This indicates that removal of Technical Debt is a driver for the epic.</description>
    <label>Technical Debt</label>
    <type>Checkbox</type>
</CustomField>