LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Driver_User_Experience__c.field-meta.xml
<CustomField>
    <fullName>Driver_User_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-01-21 - N. Ehrmann - This indicates that User Experience is a driver for the epic.</description>
    <label>User Experience</label>
    <type>Checkbox</type>
</CustomField>