LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Driver_Value__c.field-meta.xml
<CustomField>
    <fullName>Driver_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-01-21 - N. Ehrmann - This indicates that Value (such as alignment with a particular initiative) is a driver for the epic.</description>
    <label>Value</label>
    <type>Checkbox</type>
</CustomField>