LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-21 - N. Ehrmann - The epic for this task.</description>
    <label>Epic</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Epics can be related in the Epic field.</errorMessage>
        <filterItems>
            <field>sfpm_Task__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Epic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sfpm_Task__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Epic_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>