LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Estimated_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Size__c</fullName>
    <description>2020-01-13 - N. Ehrmann - Relative estimate for size of the work in this task.</description>
    <label>Estimated Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>