LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>Expected_Completion__c</fullName>
    <description>2020-01-21 - N. Ehrmann - The expected completion date according to a specified stakeholder need.</description>
    <label>Expected Completion</label>
    <type>Date</type>
</CustomField>