LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The expected outcome from the Steps to Reproduce.</description>
    <label>Expected Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>