LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The name of the before / after file(s) in the DATA LOADS folder.</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>