LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The time from start (in progress) to completion.</description>
    <formula>Completed_Date__c - Started_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>