LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>2020-01-13 - N. Ehrmann - Indicates if a task is primary or a subtask.</description>
    <formula>IF(Primary_Task__c = null, &quot;PRIMARY&quot;, &quot;SUBTASK&quot;)</formula>
    <label>Level</label>
    <type>Text</type>
</CustomField>