LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Original_Task__c.field-meta.xml
<CustomField>
    <fullName>Original_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-14 - N. Ehrmann - If multiple Issues arise over time from Work, then this should point back to the original source of that Work.</description>
    <label>Original Task</label>
    <referenceTo>sfpm_Task__c</referenceTo>
    <relationshipName>Future_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>