LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Originating_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-02-13 - N. Ehrmann - The Case which originated the task, if applicable.</description>
    <label>Originating Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Backlog_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>