LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Outsource_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-03-16 - N. Ehrmann - MANUAL - This field marks a work item as a candidate for outsource. Candidates for outsource must be well-defined, not exceed a certain level of effort (~60 hours), and must not be core to the company mission or enterprise architecture. See the Business Systems Charter for more information.</description>
    <label>Outsource Candidate</label>
    <type>Checkbox</type>
</CustomField>