LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Outsource_Cost__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Cost__c</fullName>
    <description>2020-03-16 - N. Ehrmann - Manual - An estimated / actual (depending on state of completion) cost of outsourcing this ticket.</description>
    <label>Outsource Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>