LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Outsource_Notes__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Notes__c</fullName>
    <description>2020-03-16 - N. Ehrmann - MANUAL - Notes on the potential outsourcing of the ticket.</description>
    <label>Outsource Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>