LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/perm_Target_Type__c.field-meta.xml
<CustomField>
    <fullName>perm_Target_Type__c</fullName>
    <description>2020-02-03 - N. Ehrmann - The target type for a permissions change.</description>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>