LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Primary_Driver__c.field-meta.xml
<CustomField>
    <fullName>Primary_Driver__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The primary driver for the task. (Note: Epics can use multiple drivers.)</description>
    <label>Primary Driver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initiative</fullName>
            </value>
            <value>
                <fullName>Data Quality</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>Cost Saving</fullName>
            </value>
            <value>
                <fullName>Time Saving</fullName>
            </value>
            <value>
                <fullName>Technical Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>