LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Primary_Task__c.field-meta.xml
<CustomField>
    <fullName>Primary_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-13 - N. Ehrmann - The primary task for one (or more) subtasks.</description>
    <label>Primary Task</label>
    <referenceTo>sfpm_Task__c</referenceTo>
    <relationshipName>Subtasks</relationshipName>
    <type>Lookup</type>
</CustomField>