LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The controlling project / workstream for this task.</description>
    <label>Project</label>
    <referenceTo>sfpm_Project__c</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>