LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Records__c.field-meta.xml
<CustomField>
    <fullName>Records__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The number of records for a data load.</description>
    <label>Records</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>