LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-14 - N. Ehrmann - The requester for this work.</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>