LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The date of the request for work.</description>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>