LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Started_Date__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The date that the work was moved to Location = In Progress.</description>
    <label>Started Date</label>
    <type>Date</type>
</CustomField>