LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>Steps_to_Reproduce__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The steps to reproduce an issue. Used in conjunction with Expected Result and Actual Result.</description>
    <label>Steps to Reproduce</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>