LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Subtask_Status__c.field-meta.xml
<CustomField>
    <fullName>Subtask_Status__c</fullName>
    <description>2020-02-03 - N. Ehrmann - Status for Subtasks.</description>
    <label>Subtask Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Done</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>