LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The time to complete the work.</description>
    <formula>Completed_Date__c - Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>