LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/WIP_Status__c.field-meta.xml
<CustomField>
    <fullName>WIP_Status__c</fullName>
    <description>2020-01-15 - N. Ehrmann - Status for the WIP kanban.</description>
    <label>WIP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>