LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/fields/Work_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Work_Subtype__c</fullName>
    <description>2020-01-13 - N. Ehrmann - The subtype of the work performed.</description>
    <label>Work Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Work_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Custom Field</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Custom Object</fullName>
            </value>
            <value>
                <fullName>Global Configuration</fullName>
            </value>
            <value>
                <fullName>User Administration</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
            <value>
                <fullName>Sharing</fullName>
            </value>
            <value>
                <fullName>Workflow Rule</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Process Builder</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Aura Component</fullName>
            </value>
            <value>
                <fullName>Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>