LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/recordTypes/Data.recordType-meta.xml
<RecordType>
    <fullName>Data</fullName>
    <active>true</active>
    <description>For data loads.</description>
    <label>Data</label>
</RecordType>