LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/recordTypes/Epic.recordType-meta.xml
<RecordType>
    <fullName>Epic</fullName>
    <active>true</active>
    <description>For larger work items with many sub-tasks or fixed timelines.</description>
    <label>Epic</label>
</RecordType>