LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <description>A reported bug.</description>
    <label>Issue</label>
</RecordType>