LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/recordTypes/Subtask.recordType-meta.xml
<RecordType>
    <fullName>Subtask</fullName>
    <active>true</active>
    <description>Individual build steps for work.</description>
    <label>Subtask</label>
</RecordType>