LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/recordTypes/Work.recordType-meta.xml
<RecordType>
    <fullName>Work</fullName>
    <active>true</active>
    <description>Standard Salesforce work.</description>
    <label>Work</label>
</RecordType>