LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/listViews/X000_BACKLOG_Sales.listView-meta.xml
<ListView>
    <fullName>X000_BACKLOG_Sales</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog_Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </filters>
    <label>001 - BACKLOG - Sales</label>
</ListView>