LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/listViews/X002_BACKLOG_Setup.listView-meta.xml
<ListView>
    <fullName>X002_BACKLOG_Setup</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog_Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Setup</value>
    </filters>
    <label>002 - BACKLOG - Setup</label>
</ListView>