LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Task__c/listViews/X003_BACKLOG_Customer_Success.listView-meta.xml
<ListView>
    <fullName>X003_BACKLOG_Customer_Success</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Backlog_Status__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Level__c</field>
        <operation>equals</operation>
        <value>Primary</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Customer Success</value>
    </filters>
    <label>003 - BACKLOG - Customer Success</label>
</ListView>